<resources>
    <string name="app_name">Delivery App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_">
Welcome to\nOur App
</string>
    <string name="profile">Profile</string>
    <string name="contact_no">Contact No.</string>
    <string name="name">Name</string>
    <string name="bio">Bio</string>
    <string name="e_mail">E-Mail</string>
    <string name="save">Save</string>
    <string name="todo">TODO</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="payments_history">Payments History</string>
    <string name="hello_user">Hello User</string>
    <string name="edit_address">Edit Address</string>
    <string name="address">ADDRESS</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="pincode">Pincode</string>
    <string name="hostel_s_name">Hostel\'s Name</string>
    <string name="edit">Edit</string>
    <string name="about_us">About Us</string>
    <string name="log_out">Log Out</string>
    <string name="your_orders">Your Orders</string>
    <string name="your_profile">Your Profile</string>
    <string name="settings">Settings</string>
    <string name="your_ratings">Your Ratings</string>
    <string name="explore">Explore</string>
    <string name="my_cart">My Cart</string>
    <string name="order_details">Order Details</string>
    <string name="_22">$22</string>
    <string name="my_cart2">My Cart</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="price">Price</string>
    <string name="_10">$10</string>
    <string name="_32">$32</string>
    <string name="total">Total</string>
    <string name="promo_code">Promo Code</string>
    <string name="checkout">Checkout</string>
    <string name="apply_code">Apply Code</string>
    <string name="add_more">Add More</string>
    <string name="cash_on_delivery_cod">Cash on Delivery (COD)</string>
    <string name="_321">$32</string>
    <string name="total1">Total</string>
    <string name="_22_">$22</string>
    <string name="delivery_charge_">Delivery Charge</string>
    <string name="_10_">$10</string>
    <string name="price_">Price</string>
    <string name="order_details_">Order Details</string>
    <string name="payment">Payment</string>
    <string name="payment_option">Payment Option</string>
    <string name="_50">$50</string>
    <string name="quantity">Quantity :</string>
    <string name="_1">1</string>
    <string name="_0">0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="see_all">See All</string>
    <string name="for_you">For You</string>
    <string name="textview">TextView</string>
    <string name="_4_3">4.3 *</string>
    <string name="chinese_indian_beverages_150_for_one">Chinese | Indian | Beverages | $ 150 for one</string>
    <string name="baruaz_s_cafe">Baruaz\'s Cafe</string>
    <string name="get_upto_30_off_on">Get Up to 30% OFF on</string>
    <string name="order_now">Order Now</string>
    <string name="todo1">TODO!</string>
    <string name="deliveries">Deliveries</string>
    <string name="food">Food</string>
    <string name="barbeque">Barbeque</string>
    <string name="top_offers">Top Offers</string>
    <string name="stationary">Stationary</string>
    <string name="shops_with_offers">Shops with Offers</string>
    <string name="quick_picks">Quick Picks</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="local">Local</string>
    <string name="ice_cream">Ice Cream</string>
    <string name="grocery">Grocery</string>
    <string name="gift">Gift</string>
    <string name="electronics">Electronics</string>
    <string name="on_demand">On Demand</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>
    <string name="todo8">TODO</string>
    <string name="todo9">TODO</string>
    <string name="todo10">TODO</string>
    <string name="see_all1">See All</string>
    <string name="see_all2">See All</string>
    <string name="see_all3">See All</string>
    <string name="see_all4">See All</string>
    <string name="bakery1">Bakery</string>
    <string name="shops">Shops</string>
    <string name="dishes">Dishes</string>
    <string name="todo13">TODO</string>
    <string name="todo14">TODO</string>
    <string name="biryani">Biryani</string>
    <string name="biryani_hub">Biryani Hub</string>
    <string name="_45_min">45 min</string>
    <string name="_4_3_">4.3 *</string>
    <string name="min">45 min</string>
    <string name="todo111">TODO</string>
    <string name="electronics_image">Electronics</string>
    <string name="bakery_image">Bakery</string>
    <string name="stationary_image">Stationary</string>
    <string name="pharmacy_image">Pharmacy</string>
    <string name="gift_image">Gift</string>
    <string name="local_image">Local\n</string>
    <string name="ice_cream_image">Ice Cream\n</string>
    <string name="grocery_image">Grocery</string>
    <string name="search_icon_description">Search icon</string>
    <string name="back_button_description">Back Button\n</string>
    <string name="reorder">REORDER</string>
    <string name="rate_order">RATE ORDER</string>
    <string name="_10_feb_2024_at_10_00_am">10 Feb 2024 at 10:00 AM</string>
    <string name="johnny_rolls">Johnny Rolls</string>
    <string name="delivered">Delivered ✔</string>
    <string name="select_payment_option">Select Payment Option\n</string>
</resources>
